// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on no click displays the reasons 1`] = `
.c4.c4.c4 {
  background-color: transparent !important;
  color: !important;
  border-color: !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c4.c4.c4:not([disabled]):hover,
.c4.c4.c4:not([disabled]):active,
.c4.c4.c4:not([disabled]):focus {
  color: !important;
  background-color: !important;
  border-color: !important;
}

.c2 {
  margin: 0 auto;
  width: 85%;
}

.c3 {
  margin-bottom: 0.7142857142857143rem !important;
  width: 100%;
}

.c5 {
  width: 100%;
}

.c0 {
  background-color: #fff;
  padding: 1.1428571428571428rem 0;
}

.c1 {
  text-align: center;
  margin-bottom: 0.7142857142857143rem;
  font-size: 0.9285714285714286rem;
  font-weight: normal;
  color: #333;
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Please tell us why.
    </h3>
    <div
      class="c2"
    >
      <button
        class="c3 c4 index__c-btn___3y2Qe "
        data-garden-container-id="keyboardfocus"
        data-garden-container-version="0.2.6"
        data-garden-id="buttons.button"
        data-garden-version="7.0.2"
        data-testid="pill-button"
        tabindex="0"
        type="button"
      >
        It's related, but it didn't answer my question
      </button>
      <button
        class="c5 c4 index__c-btn___3y2Qe "
        data-garden-container-id="keyboardfocus"
        data-garden-container-version="0.2.6"
        data-garden-id="buttons.button"
        data-garden-version="7.0.2"
        data-testid="pill-button"
        tabindex="0"
        type="button"
      >
        It's not related to my question
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
.c2.c2.c2 {
  background-color: transparent !important;
  color: !important;
  border-color: !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c2.c2.c2:not([disabled]):hover,
.c2.c2.c2:not([disabled]):active,
.c2.c2.c2:not([disabled]):focus {
  color: !important;
  background-color: !important;
  border-color: !important;
}

.c0 {
  background-color: #fff;
  padding: 1.1428571428571428rem 0;
}

.c1 {
  text-align: center;
  margin-bottom: 0.7142857142857143rem;
  font-size: 0.9285714285714286rem;
  font-weight: normal;
  color: #333;
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Does this article answer your question?
    </h3>
    <div
      class="container buttonCenter "
    >
      <button
        class="c2 index__c-btn___3y2Qe "
        data-garden-container-id="keyboardfocus"
        data-garden-container-version="0.2.6"
        data-garden-id="buttons.button"
        data-garden-version="7.0.2"
        data-testid="pill-button"
        tabindex="0"
        type="button"
      >
        Yes
      </button>
      <button
        class="c2 index__c-btn___3y2Qe "
        data-garden-container-id="keyboardfocus"
        data-garden-container-version="0.2.6"
        data-garden-id="buttons.button"
        data-garden-version="7.0.2"
        data-testid="pill-button"
        tabindex="0"
        type="button"
      >
        No, I need help
      </button>
    </div>
  </div>
</div>
`;
